Fixed compilation issues